--- a/index-europe.html
+++ b/index-europe.html
@@ -1,4 +1,241 @@
-<script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Europe Map Quiz</title>
+  <script src="https://d3js.org/d3.v5.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/topojson-client@3"></script>
+  <style>
+    html, body {
+        margin: 0;
+        padding: 0;
+        height: 100%; /* Ensure html and body can potentially fill height */
+    }
+    body {
+      font-family: sans-serif;
+      padding: 20px 10px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      background-color: #0a0a0a;
+      color: #fff;
+      min-height: 100vh; /* Ensure body takes at least full viewport height */
+      box-sizing: border-box; /* Include padding in height calculation */
+    }
+
+    h1 {
+        margin-bottom: 15px;
+        text-align: center;
+        color: #eee; /* Lighter heading */
+    }
+
+    #restart-button {
+      margin: 10px auto;
+      padding: 10px 18px;
+      font-size: 1em;
+      cursor: pointer;
+      background-color: #0077cc;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      transition: background-color 0.3s ease;
+    }
+
+    #restart-button:hover {
+      background-color: #005fa3;
+    }
+
+    #map-container {
+      width: 100%;
+      max-width: 900px;
+      aspect-ratio: 2 / 1; /* Default aspect ratio for wider screens */
+      position: relative;
+      background: #0a0a0a;
+      margin-bottom: 15px; /* Space below map */
+      flex-shrink: 0; /* Prevent map container from shrinking if space is tight */
+    }
+
+    svg {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border: 1px solid #555; /* Darker border */
+    }
+
+    path.country { /* Be more specific */
+      fill: #ccc; /* Lighter default fill */
+      stroke: #333;
+      stroke-width: 0.5px;
+      transition: fill 0.2s ease;
+    }
+
+    path.country:hover {
+      fill: steelblue;
+      cursor: pointer;
+    }
+
+    path.guessed {
+      stroke: #0077cc !important;
+      stroke-width: 2px !important; /* Slightly thinner stroke for guessed */
+      fill: #777 !important; /* Distinct grey for guessed */
+      cursor: default; /* Indicate non-interactive */
+    }
+
+    #country-list {
+      list-style: none;
+      padding: 10px;
+      margin: 0 auto 10px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 8px;
+      width: 90%;
+      max-width: 900px;
+      max-height: 160px; /* Base max height for desktop */
+      overflow-y: auto;
+      background-color: #1f1f1f; /* Slightly lighter background for the list */
+      border-radius: 5px;
+      flex-shrink: 0; /* Prevent list from shrinking */
+    }
+
+    #country-list li {
+      background-color: #3a3a3a;
+      border: 1px solid #555;
+      color: #fff;
+      padding: 8px 12px;
+      cursor: pointer;
+      border-radius: 5px;
+      font-size: 0.9em; /* Slightly smaller base font */
+      user-select: none;
+      transition: background-color 0.2s ease;
+      text-align: center; /* Center text in list items */
+    }
+
+     #country-list li:hover:not(.matched):not(.selected) {
+         background-color: #555;
+     }
+
+    .matched {
+      background-color: #28a745;
+      border-color: #1e7e34;
+      color: #fff;
+      cursor: not-allowed;
+      opacity: 0.8; /* Slightly less opaque */
+    }
+
+    .selected {
+      background-color: #007bff;
+      border-color: #0056b3;
+      color: white;
+    }
+
+    #feedback {
+        margin-top: 10px; /* Reduced margin */
+        min-height: 1.2em;
+        font-weight: bold;
+        text-align: center;
+        width: 90%; /* Ensure feedback text can wrap */
+        max-width: 900px;
+    }
+
+    .error {
+      color: #dc3545; /* Bootstrap red */
+    }
+
+    .correct {
+        color: #28a745; /* Bootstrap green */
+    }
+
+    #scoreboard {
+      margin-top: 10px;
+      font-size: 1em;
+      text-align: center;
+    }
+
+    #victory-message {
+      display: none;
+      font-size: 1.2em;
+      color: #28a745;
+      margin-top: 15px;
+      text-align: center;
+      font-weight: bold;
+    }
+
+    /* Responsive adjustments */
+    @media (max-width: 600px) {
+      body {
+          padding: 10px 5px; /* Further reduce padding */
+      }
+
+      h1 {
+          font-size: 1.4em;
+          margin-bottom: 10px;
+      }
+
+      #restart-button {
+        font-size: 0.9em;
+        padding: 8px 15px;
+        margin-top: 5px; /* Reduce top margin */
+      }
+
+      #map-container {
+          margin-bottom: 10px;
+          aspect-ratio: 3 / 2; /* Taller aspect ratio for mobile (adjust as needed) */
+      }
+
+      path.country {
+          stroke-width: 0.8px; /* Slightly thicker stroke on mobile for visibility */
+      }
+       path.guessed {
+           stroke-width: 1.5px !important; /* Adjust guessed stroke */
+       }
+
+
+      #country-list {
+        font-size: 0.75em; /* Adjust font size */
+        max-height: 20vh; /* Max height relative to viewport height */
+        gap: 5px;
+        width: 95%;
+        padding: 8px;
+      }
+
+      #country-list li {
+        padding: 5px 8px; /* Smaller padding */
+      }
+
+       #scoreboard, #feedback, #victory-message {
+         font-size: 0.9em;
+         width: 95%;
+         margin-top: 8px; /* Consistent smaller margin */
+       }
+       #feedback { min-height: 1.1em; }
+
+       #victory-message {
+         font-size: 1.1em;
+         margin-top: 10px;
+       }
+    }
+  </style>
+</head>
+<body> <h1>Europe Map Quiz</h1>
+  <button id="restart-button">Restart Game</button>
+
+  <div id="map-container">
+    <svg viewBox="0 0 900 450" preserveAspectRatio="xMidYMid meet"></svg>
+  </div>
+
+  <ul id="country-list"></ul>
+  <div id="feedback"></div>
+  <div id="scoreboard">
+    <strong>Score:</strong> <span id="score">0</span> |
+    <strong>Attempts:</strong> <span id="attempts">0</span>
+  </div>
+  <div id="victory-message"></div>
+
+  <script>
     // --- Map data ---
     const nameMap = { // Using standard English names
       "AL": "Albania", "AT": "Austria", "BE": "Belgium", "BG": "Bulgaria", "HR": "Croatia",
@@ -16,14 +253,10 @@
 
     // --- D3 Setup ---
     const svg = d3.select('svg');
-
-    // ***** ADJUSTED PROJECTION *****
     const projection = d3.geoMercator()
-      .center([18, 50]) // Lowered latitude (e.g., 50 instead of 55), adjusted longitude slightly
-      .scale(480)      // Slightly reduced scale (e.g., 480 instead of 500) to fit more vertically
-      .translate([450, 225]); // Centered Y translation in 900x450 viewBox (450 / 2 = 225)
-    // ******************************
-
+      .center([20, 55])
+      .scale(500) // Adjust scale if needed
+      .translate([450, 250]); // Center in default 900x450 viewbox
     const pathGenerator = d3.geoPath().projection(projection);
 
     // --- Game State Variables ---
@@ -65,7 +298,7 @@
          .data(validCountries, d => d.id)
          .enter().append('path')
          .attr('class', 'country')
-         .attr('d', pathGenerator) // Path generator uses the updated projection
+         .attr('d', pathGenerator)
          .attr('id', d => `map-${d.id}`)
          .on('click', handleMapClick);
 
@@ -91,7 +324,7 @@
     });
 
     // --- Event Handlers ---
-    // (Handlers remain the same as previous version)
+
     function handleListClick(d) {
       const listItem = d3.select(this);
       if (listItem.classed('matched')) return;
@@ -109,28 +342,41 @@
       if (selectedCountryData) {
         attempts++;
         const correctId = selectedCountryData.id;
-        const clickedId = d.id;
-        const clickedName = nameMap[clickedId] || "this area";
+        const clickedId = d.id; // ID from the clicked map feature
+
+         // Ensure the clicked feature has a name in our map
+         const clickedName = nameMap[clickedId] || "this area";
 
         if (clickedId === correctId) {
+          // --- Correct Guess ---
           score += 10;
           correctGuesses++;
           feedbackElement.text('Correct!').classed('correct', true).classed('error', false);
+
           clickedPath.classed('guessed', true).style('pointer-events', 'none');
           selectedCountryData.element.classed('matched', true)
                                    .classed('selected', false)
-                                   .on('click', null);
-          selectedCountryData = null;
+                                   .on('click', null); // Prevent re-clicking list item
+
+          selectedCountryData = null; // Reset selection
+
+          // Check for victory
           if (correctGuesses === totalCountries) {
             victoryMessageElement
               .text(`🎉 You won! Final score: ${score} in ${attempts} attempts.`)
               .style('display', 'block');
           }
+
         } else {
+          // --- Incorrect Guess ---
+          // Provide feedback about what was actually clicked
           feedbackElement.text(`Incorrect. That was ${clickedName}. Try again.`).classed('error', true).classed('correct', false);
         }
+
         updateScoreboard();
+
       } else {
+        // --- No country name selected ---
         feedbackElement.text('Please select a country name from the list first.').classed('error', true).classed('correct', false);
       }
     }
@@ -145,3 +391,5 @@
     restartButton.on('click', () => location.reload());
 
   </script>
+</body>
+</html>
