--- a/index-europe.html
+++ b/index-europe.html
@@ -34,15 +34,16 @@
     }
 
     #map-container {
-      width: 100%;
+        width: 100%;
       max-width: 1000px;
-      background-color: #0a0a0a;
+      background-color: #0a0a0a; /* רקע אחיד */
+      overflow: hidden;
     }
 
     svg {
       width: 100%;
       height: auto;
-      border: 1px solid #ccc;
+      /*border: 1px solid #ccc; <-- נבטל את זה לגמרי*/
     }
 
     path {
