--- a/index-europe.html
+++ b/index-europe.html
@@ -36,7 +36,7 @@
     #map-container {
         width: 100%;
       max-width: 1000px;
-      background-color: #0a0a0a; /* רקע אחיד */
+      background-color: #eeeeee; /* רקע של המפה */
       overflow: hidden;
     }
 
