--- a/eurpe1.html
+++ b/eurpe1.html
@@ -18,8 +18,8 @@
       color: #fff;
     }
 
-    #restart-button {
-      margin: 10px auto;
+    button {
+      margin: 10px;
       padding: 10px 18px;
       font-size: 1em;
       cursor: pointer;
@@ -29,21 +29,20 @@
       border-radius: 5px;
     }
 
-    #restart-button:hover {
+    button:hover {
       background-color: #005fa3;
     }
 
     #map-container {
       width: 100%;
-      max-width: 1000px;
+      max-width: 1200px;
       background-color: #eeeeee;
       overflow: hidden;
     }
 
     svg {
       width: 100%;
-      height: 100%;
-      aspect-ratio: 3 / 2;
+      height: auto;
       display: block;
     }
 
@@ -60,15 +59,19 @@
     }
 
     .guessed {
+      fill: lightgreen !important;
       stroke: #0077cc !important;
-      stroke-width: 3px !important;
-      fill-opacity: 1 !important;
+      stroke-width: 2px !important;
+    }
+
+    .wrong {
+      fill: red !important;
     }
 
     #country-list {
       list-style: none;
       padding: 0;
-      margin: 20px auto 10px;
+      margin: 10px;
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
@@ -90,16 +93,14 @@
       color: #fff;
     }
 
-    #country-list li.selected {
-      background-color: #0077cc;
-      color: #fff;
-    }
-
     .matched {
-      background-color: lightgreen;
-      border-color: green;
-      color: gray;
+      background-color: #88cc88;
+      border-color: #008800;
+      color: #333;
+      font-weight: bold;
+      text-decoration: line-through;
       cursor: not-allowed;
+      opacity: 0.6;
     }
 
     .error {
@@ -119,21 +120,22 @@
       margin-top: 10px;
     }
 
-    @media (max-width: 600px) {
-      #country-list {
-        font-size: 0.8em;
-        max-height: 120px;
-      }
+    #target-country {
+      font-size: 1.1em;
+      font-weight: bold;
+      color: yellow;
+      margin-top: 10px;
     }
   </style>
 </head>
 <body>
   <button id="restart-button">Restart Game</button>
-
+  <button id="toggle-unmatched">Show Only Unmatched</button>
+  <button id="new-target">New Country</button>
+  <div id="target-country"></div>
   <div id="map-container">
-    <svg preserveAspectRatio="xMidYMid meet"></svg>
+    <svg preserveAspectRatio="xMidYMid meet" viewBox="0 0 1000 660"></svg>
   </div>
-
   <ul id="country-list"></ul>
   <div id="feedback"></div>
   <div id="scoreboard">
@@ -158,88 +160,75 @@
 
     const svg = d3.select("svg");
     const g = svg.append("g");
-    const width = 1000;
-    const height = 660;
-
-    const projection = d3.geoMercator()
-      .center([20, 55])
-      .scale(600)
-      .translate([width / 2, height / 2]);
-
+    const projection = d3.geoMercator().center([20, 55]).scale(600).translate([500, 330]);
     const path = d3.geoPath().projection(projection);
 
-    const zoom = d3.zoom()
-      .scaleExtent([1, 8])
-      .on("zoom", (event) => {
-        g.attr("transform", event.transform);
-      });
-
-    svg.call(zoom);
-
-    let selectedCountry = null;
-    let score = 0;
-    let attempts = 0;
-    let correctGuesses = 0;
+    let currentTarget = null, score = 0, attempts = 0, correctGuesses = 0, hideMatched = false;
+    const feedbackElement = d3.select('#feedback');
+    const targetDisplay = d3.select('#target-country');
 
     d3.json('data/europe.topojson').then(data => {
       const countries = topojson.feature(data, data.objects.europe).features;
+      const validCountries = countries.filter(d => nameMap[d.id]);
 
       const countryPaths = g.selectAll('path')
-        .data(countries)
+        .data(validCountries)
         .enter().append('path')
         .attr('d', path)
-        .attr('id', d => 'country-' + d.id);
+        .attr('id', d => 'country-' + d.id)
+        .on('click', onCountryClick);
+
+      const countryNames = validCountries.map(d => ({ id: d.id, name: nameMap[d.id] }));
 
       const countryList = d3.select('#country-list');
-      const countryNames = countries.map(d => ({
-        id: d.id,
-        name: nameMap[d.id] || d.id,
-        centroid: path.centroid(d)
-      }));
-
-      const countryItems = countryList.selectAll('li')
+      countryList.selectAll('li')
         .data(countryNames)
         .enter().append('li')
         .attr('id', d => 'country-' + d.id)
-        .text(d => d.name)
-        .on('click', function(event, d) {
-          if (!d3.select(this).classed('matched')) {
-            countryList.selectAll('li').classed('selected', false);
-            d3.select(this).classed('selected', true);
-            selectedCountry = d;
-            d3.select('#feedback').text('');
-          }
-        });
+        .text(d => d.name);
 
-      countryPaths.on('click', function(event, d) {
-        const feedbackElement = d3.select('#feedback');
-        if (selectedCountry) {
-          attempts++;
-          d3.select('#attempts').text(attempts);
-          if (nameMap[d.id] === selectedCountry.name) {
-            score += 10;
-            correctGuesses++;
-            d3.select('#score').text(score);
-            feedbackElement.text('Correct!').classed('error', false);
-            d3.select(this).classed('guessed', true).style('pointer-events', 'none');
-            const matchedItem = d3.select('#country-' + selectedCountry.id);
-            matchedItem.classed('matched', true).classed('selected', false).on('click', null);
-            selectedCountry = null;
+      function pickRandomTarget() {
+        const remaining = countryNames.filter(d => !d3.select('#country-' + d.id).classed('matched'));
+        if (remaining.length === 0) return;
+        currentTarget = remaining[Math.floor(Math.random() * remaining.length)];
+        targetDisplay.text('Find: ' + currentTarget.name);
+      }
 
-            if (correctGuesses === countryNames.length) {
-              d3.select('#victory-message')
-                .text(`🎉 You won! Final score: ${score} in ${attempts} attempts.`)
-                .style('display', 'block');
-            }
-          } else {
-            feedbackElement.text('Incorrect! Try again.').classed('error', true);
+      function onCountryClick(event, d) {
+        attempts++;
+        d3.select('#attempts').text(attempts);
+
+        if (d.id === currentTarget.id) {
+          score += 10;
+          correctGuesses++;
+          d3.select('#score').text(score);
+          d3.select(this).classed('guessed', true).style('pointer-events', 'none');
+          const matchedItem = d3.select('#country-' + d.id);
+          matchedItem.classed('matched', true).on('click', null);
+          feedbackElement.text('Correct!').classed('error', false);
+          pickRandomTarget();
+
+          if (correctGuesses === countryNames.length) {
+            d3.select('#victory-message').text(`🎉 You won! Final score: ${score} in ${attempts} attempts.`).style('display', 'block');
+            targetDisplay.text('');
           }
         } else {
-          feedbackElement.text('Please select a country name first.').classed('error', true);
+          feedbackElement.text('Incorrect! Try again.').classed('error', true);
+          const path = d3.select(this);
+          path.classed('wrong', true);
+          setTimeout(() => path.classed('wrong', false), 700);
         }
-      });
+      }
 
       d3.select('#restart-button').on('click', () => location.reload());
+      d3.select('#toggle-unmatched').on('click', () => {
+        hideMatched = !hideMatched;
+        d3.selectAll('#country-list li').style('display', d => {
+          return hideMatched && d3.select('#country-' + d.id).classed('matched') ? 'none' : 'inline-block';
+        });
+      });
+      d3.select('#new-target').on('click', pickRandomTarget);
+      pickRandomTarget();
     });
   </script>
 </body>
