--- a/eurpe1.html
+++ b/eurpe1.html
@@ -18,8 +18,8 @@
       color: #fff;
     }
 
-    button {
-      margin: 10px;
+    #restart-button {
+      margin: 10px auto;
       padding: 10px 18px;
       font-size: 1em;
       cursor: pointer;
@@ -29,13 +29,13 @@
       border-radius: 5px;
     }
 
-    button:hover {
+    #restart-button:hover {
       background-color: #005fa3;
     }
 
     #map-container {
       width: 100%;
-      max-width: 1200px;
+      max-width: 1000px;
       background-color: #eeeeee;
       overflow: hidden;
     }
@@ -43,7 +43,6 @@
     svg {
       width: 100%;
       height: auto;
-      display: block;
     }
 
     path {
@@ -59,9 +58,9 @@
     }
 
     .guessed {
-      fill: lightgreen !important;
       stroke: #0077cc !important;
-      stroke-width: 2px !important;
+      stroke-width: 3px !important;
+      fill: lightgreen !important;
     }
 
     .wrong {
@@ -71,7 +70,7 @@
     #country-list {
       list-style: none;
       padding: 0;
-      margin: 10px;
+      margin: 20px auto 10px;
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
@@ -93,14 +92,16 @@
       color: #fff;
     }
 
+    #country-list li.selected {
+      background-color: #0077cc;
+      color: #fff;
+    }
+
     .matched {
-      background-color: #88cc88;
-      border-color: #008800;
-      color: #333;
-      font-weight: bold;
-      text-decoration: line-through;
+      background-color: lightgreen;
+      border-color: green;
+      color: gray;
       cursor: not-allowed;
-      opacity: 0.6;
     }
 
     .error {
@@ -120,22 +121,21 @@
       margin-top: 10px;
     }
 
-    #target-country {
-      font-size: 1.1em;
-      font-weight: bold;
-      color: yellow;
-      margin-top: 10px;
+    @media (max-width: 600px) {
+      #country-list {
+        font-size: 0.8em;
+        max-height: 120px;
+      }
     }
   </style>
 </head>
 <body>
   <button id="restart-button">Restart Game</button>
-  <button id="toggle-unmatched">Show Only Unmatched</button>
-  <button id="new-target">New Country</button>
-  <div id="target-country"></div>
+
   <div id="map-container">
-    <svg preserveAspectRatio="xMidYMid meet" viewBox="0 0 1000 660"></svg>
+    <svg viewBox="0 0 1000 660" preserveAspectRatio="xMidYMid meet"></svg>
   </div>
+
   <ul id="country-list"></ul>
   <div id="feedback"></div>
   <div id="scoreboard">
@@ -145,90 +145,86 @@
   <div id="victory-message"></div>
 
   <script>
-    const nameMap = {
-      "AL": "Albania", "AT": "Austria", "BE": "Belgium", "BG": "Bulgaria", "HR": "Croatia",
-      "CY": "Cyprus", "CZ": "Czech Republic", "DK": "Denmark", "EE": "Estonia", "FI": "Finland",
-      "FR": "France", "DE": "Germany", "GR": "Greece", "HU": "Hungary", "IS": "Iceland",
-      "IE": "Ireland", "IT": "Italy", "LV": "Latvia", "LT": "Lithuania", "LU": "Luxembourg",
-      "MT": "Malta", "NL": "Netherlands", "NO": "Norway", "PL": "Poland", "PT": "Portugal",
-      "RO": "Romania", "SK": "Slovakia", "SI": "Slovenia", "ES": "Spain", "SE": "Sweden",
-      "CH": "Switzerland", "GB": "United Kingdom", "UA": "Ukraine", "RS": "Serbia", "BA": "Bosnia and Herzegovina",
-      "MD": "Moldova", "MK": "North Macedonia", "BY": "Belarus", "RU": "Russia", "TR": "Turkey",
-      "AZ": "Azerbaijan", "AM": "Armenia", "IL": "Israel", "LI": "Liechtenstein", "FO": "Faroe Islands",
-      "AD": "Andorra", "MC": "Monaco", "ME": "Montenegro", "SM": "San Marino", "VA": "Vatican City"
-    };
+    const nameMap = { ... }; // שימוש ב-nameMap כמו שהיה
 
     const svg = d3.select("svg");
-    const g = svg.append("g");
-    const projection = d3.geoMercator().center([20, 55]).scale(600).translate([500, 330]);
+    const width = 960;
+    const height = 600;
+
+    const projection = d3.geoMercator()
+      .center([20, 55])
+      .scale(600)
+      .translate([width / 2, height / 2]);
+
     const path = d3.geoPath().projection(projection);
 
-    let currentTarget = null, score = 0, attempts = 0, correctGuesses = 0, hideMatched = false;
-    const feedbackElement = d3.select('#feedback');
-    const targetDisplay = d3.select('#target-country');
+    let selectedCountry = null;
+    let score = 0;
+    let attempts = 0;
+    let correctGuesses = 0;
 
     d3.json('data/europe.topojson').then(data => {
       const countries = topojson.feature(data, data.objects.europe).features;
-      const validCountries = countries.filter(d => nameMap[d.id]);
 
-      const countryPaths = g.selectAll('path')
-        .data(validCountries)
+      const countryPaths = svg.selectAll('path')
+        .data(countries)
         .enter().append('path')
         .attr('d', path)
-        .attr('id', d => 'country-' + d.id)
-        .on('click', onCountryClick);
-
-      const countryNames = validCountries.map(d => ({ id: d.id, name: nameMap[d.id] }));
+        .attr('id', d => 'country-' + d.id);
 
       const countryList = d3.select('#country-list');
+      const countryNames = countries.map(d => ({
+        id: d.id,
+        name: nameMap[d.id] || d.id,
+        centroid: path.centroid(d)
+      }));
+
       countryList.selectAll('li')
         .data(countryNames)
         .enter().append('li')
         .attr('id', d => 'country-' + d.id)
-        .text(d => d.name);
+        .text(d => d.name)
+        .on('click', function(d) {
+          if (!d3.select(this).classed('matched')) {
+            countryList.selectAll('li').classed('selected', false);
+            d3.select(this).classed('selected', true);
+            selectedCountry = d;
+            d3.select('#feedback').text('');
+          }
+        });
 
-      function pickRandomTarget() {
-        const remaining = countryNames.filter(d => !d3.select('#country-' + d.id).classed('matched'));
-        if (remaining.length === 0) return;
-        currentTarget = remaining[Math.floor(Math.random() * remaining.length)];
-        targetDisplay.text('Find: ' + currentTarget.name);
-      }
+      countryPaths.on('click', function(d) {
+        const feedbackElement = d3.select('#feedback');
+        if (selectedCountry) {
+          attempts++;
+          d3.select('#attempts').text(attempts);
+          if (nameMap[d.id] === selectedCountry.name) {
+            score += 10;
+            correctGuesses++;
+            d3.select('#score').text(score);
+            feedbackElement.text('Correct!').classed('error', false);
+            d3.select(this).classed('guessed', true).style('pointer-events', 'none');
+            const matchedItem = d3.select('#country-' + selectedCountry.id);
+            matchedItem.classed('matched', true).classed('selected', false).on('click', null);
+            selectedCountry = null;
 
-      function onCountryClick(event, d) {
-        attempts++;
-        d3.select('#attempts').text(attempts);
-
-        if (d.id === currentTarget.id) {
-          score += 10;
-          correctGuesses++;
-          d3.select('#score').text(score);
-          d3.select(this).classed('guessed', true).style('pointer-events', 'none');
-          const matchedItem = d3.select('#country-' + d.id);
-          matchedItem.classed('matched', true).on('click', null);
-          feedbackElement.text('Correct!').classed('error', false);
-          pickRandomTarget();
-
-          if (correctGuesses === countryNames.length) {
-            d3.select('#victory-message').text(`🎉 You won! Final score: ${score} in ${attempts} attempts.`).style('display', 'block');
-            targetDisplay.text('');
+            if (correctGuesses === countryNames.length) {
+              d3.select('#victory-message')
+                .text(`🎉 You won! Final score: ${score} in ${attempts} attempts.`)
+                .style('display', 'block');
+            }
+          } else {
+            feedbackElement.text('Incorrect! Try again.').classed('error', true);
+            const wrongPath = d3.select(this);
+            wrongPath.classed('wrong', true);
+            setTimeout(() => wrongPath.classed('wrong', false), 700);
           }
         } else {
-          feedbackElement.text('Incorrect! Try again.').classed('error', true);
-          const path = d3.select(this);
-          path.classed('wrong', true);
-          setTimeout(() => path.classed('wrong', false), 700);
+          feedbackElement.text('Please select a country name first.').classed('error', true);
         }
-      }
+      });
 
       d3.select('#restart-button').on('click', () => location.reload());
-      d3.select('#toggle-unmatched').on('click', () => {
-        hideMatched = !hideMatched;
-        d3.selectAll('#country-list li').style('display', d => {
-          return hideMatched && d3.select('#country-' + d.id).classed('matched') ? 'none' : 'inline-block';
-        });
-      });
-      d3.select('#new-target').on('click', pickRandomTarget);
-      pickRandomTarget();
     });
   </script>
 </body>
