--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <a href="index_usa.html" class="map-btn">🇺🇸 United States</a>
     <a href="index-europe.html" class="map-btn">🇪🇺 Europe</a>
     <a href="index-asia.html" class="map-btn">🌏 Asia (coming soon)</a>
-    <a href="eurpe1.html" class="map-btn">🌏 Europe2 (coming soon)</a>
+    <a href="index-usa1.html" class="map-btn">🌏 USA1 (coming soon)</a>
   </div>
 </body>
 </html>
